Fix footer alignement

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -24,9 +24,7 @@ body{
     --weight2: 400;
     --weight3: 600;
 }
-a{
-    text-decoration: none !important;
-}
+
 .img-fluid-sm {
     height: 350px !important;
 }
@@ -99,8 +97,7 @@ h2{
     .cover_home{
         background:#ffffff;
     }
-    .right-section-header{
-    }
+
 
     .home-cover{
         background:#ffffff ;
@@ -111,10 +108,7 @@ h2{
         display: flex;
         justify-content: center;
     }
-    .search-input{
-        border-radius: 0;
 
-    }
     .input-item-center{
         margin: 20px 0 !important;
     }
@@ -161,6 +155,7 @@ h2{
     }
     .search-input{
         height: 40px;
+        border-radius: 0;
     }
     .btn-search-site{
         height: 40px;
@@ -201,15 +196,12 @@ h2{
         font-size: calc(2.104rem + 2vw);
     }
 
-    .home-cover{
-    }
+
     .cover_home{
         background:#ffffff ;
 
     }
 
-    .right-section-header{
-    }
 
     .contenair-cover-home{
         padding: 8vh 0 !important;
@@ -235,9 +227,7 @@ h2{
         font-size: calc(1.475rem ) !important;
         font-weight: bold !important;
     }
-    .cover-main2{
-        max-height: 50vh;
-    }
+
     .border-titre{
         width: 200px !important;
     }
@@ -262,16 +252,14 @@ h2{
 
 }
 
-.header {
-    background-color: #ffffff;
-}
+
 
 .text-justify {
     text-align: justify;
 }
 
 a{
-    text-decoration: none;
+    text-decoration: none !important;
     transition: all 0.5s;
 }
 a:hover{
@@ -283,6 +271,10 @@ a:hover{
     background-color: #0c3a64;
     color: #fff;
     width: 100%;
+    min-height: 15vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .footer a, h5 {
@@ -297,6 +289,7 @@ ul{
     padding: 10px 30px;
     transition: all 0.2s;
     border-bottom: rgba(116, 117, 119, 0.15) 1px solid;
+    background-color: #ffffff;
 
 }
 
@@ -468,6 +461,7 @@ ul{
 .cover-main2{
     min-height: 40vh;
     height: auto;
+    max-height: 50vh;
 }
 .coverText{
     font-size: 0.5em;
@@ -804,10 +798,7 @@ ul{
     position: relative !important;
     height: unset !important;
 }
-.cover-main2{
-    min-height: 40vh;
-    height: auto;
-}
+
 .cover-primary{
     background-color: var(--color-site-b) !important;
 }
